--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,33 @@
 <resources>
     <string name="app_name">伍途</string>
+
+    <!--第三方登录-->
+    <string name="qqLogin">QQ登录</string>
+    <string name="wechatLogin">微信登录</string>
+    <string name="sinaLogin">微博登录</string>
+    <string name="goLogin"><i><u> → 手机号登录</u></i></string>
+
+    <!--登录-->
+    <string name="login_label">登录</string>
+    <string name="login_input_userName">请输入手机号</string>
+    <string name="login_input_pwd">请输入密码</string>
+    <string name="login_btn_login">登录</string>
+    <string name="login_tv_goRegister"><i><u>没有账号，去注册~</u></i></string>
+    <string name="login_tv_goFindPwd"><i><u>忘记密码?</u></i></string>
+
+    <!-- 注册 -->
+    <string name="register_label">验证手机号</string>
+    <string name="register_username">输入手机号</string>
+    <string name="register_verifyCode">输入验证码</string>
+    <string name="register_btn_verify">获取验证码</string>
+    <string name="register_btn_next">下一步</string>
+    <string name="register_pwd">设置密码</string>
+    <string name="register_rePwd">再次输入密码</string>
+    <string name="register_finish">注册完成</string>
+
+    <!--密码找回-->
+    <string name="register_pwd_label">设置密码</string>
+    <string name="findPwd_username">手机号</string>
+    <string name="findPwd_pwd">设置新密码</string>
+    <string name="findPwd_finish">完成</string>
 </resources>
